--- a/tugas-7-2308541028-anggi-samuel-manullang.ipynb
+++ b/tugas-7-2308541028-anggi-samuel-manullang.ipynb
@@ -94,7 +94,7 @@
     "print(\"\\nMasukkan elemen matriks kedua (2x2):\")\n",
     "matriks2_28 = np.array([[float(input()), float(input())],\n",
     "                     [float(input()), float(input())]])\n",
-    "hasil = matriks1 + matriks2\n",
+    "hasil = matriks1_28 + matriks2_28\n",
     "print(\"\\nMatriks Pertama:\")\n",
     "print(matriks1)\n",
     "print(\"\\nMatriks Kedua:\")\n",
