--- a/tugas-7-2308541028-anggi-samuel-manullang.ipynb
+++ b/tugas-7-2308541028-anggi-samuel-manullang.ipynb
@@ -96,9 +96,9 @@
     "                     [float(input()), float(input())]])\n",
     "hasil = matriks1_28 + matriks2_28\n",
     "print(\"\\nMatriks Pertama:\")\n",
-    "print(matriks1)\n",
+    "print(matriks1_28)\n",
     "print(\"\\nMatriks Kedua:\")\n",
-    "print(matriks2)\n",
+    "print(matriks2_28)\n",
     "print(\"\\nHasil Penjumlahan:\")\n",
     "print(hasil)"
    ]
